--- a/gr8conf-groovy-macro/index.html
+++ b/gr8conf-groovy-macro/index.html
@@ -401,6 +401,14 @@ def returnStatement = macro {
           </table>
         </section>
         <section>
+          <h2>Current status of MacroGroovy</h2>
+          <ul>
+            <li class='fragment'>Global AST transformation</li>
+            <li class='fragment'>There is already ready-to-merge pull request</li>
+            <li class='fragment'>... and it's almost 1y.o. <br/><img src="images/are-you-kidding-me2.png" /></li>
+          </ul>
+        </section>
+        <section>
           <h2>Current status of macro methods</h2>
           <ul>
             <li class='fragment'>Not yet in groovy-core</li>
