--- a/gr8conf-groovy-macro/index.html
+++ b/gr8conf-groovy-macro/index.html
@@ -295,6 +295,7 @@ assert fact("5") == 120</code></pre>
           <span class='fragment' data-code-focus='2-2'></span>
           <span class='fragment' data-code-focus=''></span>
         </section>
+        <section data-background='images/one_more_thing.jpg'></section>
         <section>
           <h3>Classic AST nodes creation</h3>
           <pre><code class="groovy" data-trim>def returnStatement = new ReturnStatement(
